metasfresh/metasfresh/#1028 update developer docs
FRESH-1513 #1028 extract distributable stuff into dedicated repo